--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-file-system": "~18.1.9",
-    "expo-asset": "~11.1.5"
+    "expo-asset": "~11.1.5",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
