--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@mapbox/polyline": "^1.2.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.3.1",
+    "axios": "^1.9.0",
     "expo": "~53.0.7",
     "expo-asset": "~11.1.5",
     "expo-blur": "~14.1.4",
@@ -25,6 +27,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.6",
     "expo-linking": "~7.1.4",
+    "expo-location": "^18.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -36,6 +39,7 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
